# Bottom-LiDAR-docker

./: .gitignore  CMakeLists.txt  README.md  backup.txt  bench_all_threads8_5runs_summary.json  benchmark_output.txt  graphmode_5run_experiment.sh  run_build.sh  window_sweep_experiment.sh
.sisyphus/: ralph-loop.local.md
.sisyphus/plans/: gmm-voxel-implementation-plan.md
artifacts/uml/: gmm_voxel_architecture.puml  gmm_voxel_implementation.prisma  gmm_voxel_light_ndt_stage_explained.md  incremental_voxelmap_impl_explained.md  mixture_model_ndt_design_explained.md  mixture_model_ndt_flow.prisma  voxel_structure.prisma  voxel_structure_explained.md  voxelmap_flow.prisma
docker-compose/: bottom-lidar_compose.yml
dockerfile/: bottom-lidar.Dockerfile  gtsam-points-cpu.Dockerfile
docs/: BENCHMARK_ANALYSIS.md  BENCHMARK_REPORT.md  NDT_CODE_MATH_MAPPING.md  README.md  README_loam_curvature_ko.md  benchmark_results.md  hyperparameters_tutorial.md  hyperparameters_tutorial_en.md  liosam_feature_extraction_integration.md  loam_curvature_bug_analysis_ko.md  loam_curvature_diagrams_ko.md  loam_feature_bug_fixes.md  ndt_exponential_fix.md  quick_reference.md  what_main.md
docs/architecture/: main_현재코드구조_및_UML_2026-03-12.md
docs/archive/: ARCHIVE_STRUCTURE.md
docs/archive/2026-01/: demo_matching_cost_factors_report.md
docs/archive/2026-02/: integration_changelog.md  loam_curvature_uml_ko.puml  ndt_comprehensive_analysis.md  ndt_factor_detailed_ko.md  ndt_factor_location_and_math_verification.md  ndt_implementation_ko.md  ndt_performance_report.md  ndt_structure_verification.md  scan_to_map_analysis_ko.md  scan_to_map_implementation.md  scan_to_map_main_integration.md  uml_diagrams.md
docs/benchmark/: factor_5run_threads8_상세분석_2026-03-10.md  full_connection_true_vs_false_벤치마크_비교_2026-03-12.md  graphmode_3way_비교_벤치마크_2026-03-12.md  graphmode_5run_평균_벤치마크_2026-03-12.md  main_정합알고리즘_수학검증_및_headless결과_2026-03-04.md  window_sweep_최적window_분석_2026-03-12.md
docs/changelog/: 변경내역_NDT_VGICP_개선_2026-02-26.md  변경내역_headless_benchmark.md  변경내역_light_ndt_통합_및_문서업데이트_2026-03-04.md  변경내역_ndt_magnusson_refactoring.md  변경내역_ndt_score_cost_동등성주석_2026-03-04.md  변경내역_ndt_매트릭스_실행가이드_2026-03-05.md  변경내역_thread_default_자동설정_2026-03-03.md
docs/gmm/: GMM_NDT_구현_작업지시서.md  GMM_NDT_구현진행로그_2026-03-10.md  GMM_NDT_벤치마크_결과_2026-03-16.md  MNDT_구현플랜_상세보고서_2026-03-10.md  NDT_GMM_연구보고서_방향_TODO_2026-03-06.md  NDT_vs_NDT+MixtureModel_수학_상세설명_2026-03-16.md  em-mog-fitting-tutorial.md  em-mog-point-cloud-theory.md  gmm-design.md  gmm-mathematical-foundations.md  gmm-voxel-structure-study.md  gmm-work-status.md  lightndt-vs-mixture-lightndt-comparison.md
docs/loam/: liosam_feature_extraction_integration.md
docs/ndt/: J_target_J_source_수학_상세해설_2026-03-05.md  NDT_LM_INCOMPATIBILITY_ANALYSIS.md  README.md  light_ndt_vs_ndt_구현_수학_비교_정리.md  magnusson_implementation_comparison_ko.md  ndt_hessian_weight_only_analysis_ko.md  ndt_속도개선_매트릭스_실험_2026-03-05.md  omp_comparison.md  scoreless_weight_only_method_ko.md  uml.md  usage_guide.md  weighted_gauss_newton_feasibility_ko.md
docs/ndt/analysis/: NDT_Hessian_H1_H2_H3_수학_분석_2026-03-09.md  NDT_multi_resolution_상세분석_ko.md  NDT_가평균_가분산_계산방식_상세분석.md  NDT_성능분석_보고서.md  NDT_수학_코드_7문항_상세분석_2026-03-09.md  ndt_weight_sign_및_수렴속도_상세해설_ko.md  ndt_수렴속도_재검증_원인분석_2026-03-04.md  why_lightndt_is_fast_수학구조_상세분석_ko.md  why_ndt_is_slow_in_gtsam_lm_h1only_상세분석_ko.md
docs/ndt/checklists/: factor_개선_실행체크리스트_2026-03-06.md
docs/ndt/comparison/: NDT_vs_LightNDT_코드구조_수학차이_상세분석_2026-03-06.md  ndt_lightndt_gicp_수학_컨셉_비교.md  why_ndt_vs_lightndt_운영의사결정_가이드_ko.md
docs/ndt/experiments/: NDT_Conditional_H2_최종보고서_2026-03-09.md  NDT_P0_3패치_적용결과_보고서_2026-03-06.md  full_project_factor_실험_수학코드_종합보고서_2026-03-06.md
include/: featureExtraction.hpp  loam_feature.hpp
include/gmm/: gmm_voxelmap_cpu.hpp  integrated_mixture_light_ndt_factor.hpp  mixture_em_backend.hpp
include/gmm/impl/: integrated_mixture_light_ndt_factor_impl.hpp
include/gtsam_points/docs/: gtsam_points_library_structure.md
include/gtsam_points/include/gtsam_points/optimizers/: isam2_ext.hpp
include/ndt/: integrated_light_ndt_factor.hpp  integrated_ndt_factor.hpp
include/ndt/impl/: integrated_light_ndt_factor_impl.hpp  integrated_ndt_factor_impl.hpp
src/: featureExtraction.cpp  loam_feature.cpp  main.cpp
src/gmm/: gmm_voxelmap_cpu.cpp  integrated_mixture_light_ndt_factor.cpp  mixture_em_backend.cpp
src/gmm/test/: test_gmm_voxelmap.cpp
src/ndt/: integrated_light_ndt_factor.cpp  integrated_ndt_factor.cpp
test/: scan_to_map.cpp  scan_to_map_demo.cpp  test_all_factors.cpp
(+1 files in other folders)
